# rock_spock

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
python/: pyproject.toml
python/rock_spock/: main.py  old.py
rust/rock_spock/: Cargo.toml
