[project]
name = "rock_spock"
version = "0.0.0"
description = "Lovely Spam! Wonderful Spam!"
requires-python = "~=3.10"
authors = [
    {name = "C-Bookie", email = "duck-vader@hotmail.co.uk"},
    {name = "Latifah-Parara", email = "tifa-p@live.co.uk"}
]
#readme = "README.md"



dependencies = []

[project.urls]
Home = "https://git.oxfordnanolabs.local/IONDEV/mk_rc_testing"
